# Borsalino

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  LICENSE-COMMERCIAL  README.md
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  VERIFICATION_ROADMAP_SUPPLEMENT.md  critique.md  metal-debug-handoff.md  verification-integration.md
docs/plans/: 2026-05-19-vulkan-backend-design.md  2026-05-19-vulkan-backend-plan.md  2026-06-29-numerical-correctness-verification.md
examples/: bench.rs  candle_tropical_mask.rs  dispatch_profile.rs  hello_compute.rs  ia_geometric_product.rs  saxpy.rs  tiled_matmul.rs
src/: error.rs  kani_harnesses.rs  lib.rs  main.rs  metal.rs  numerical_check.rs  verify.rs  vulkan.rs
