[package]
name = "borsalino"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Thin GPU compute abstraction — Metal and Vulkan backends for Industrial Algebra"
license = "AGPL-3.0-only"
repository = "https://github.com/industrial-algebra/Borsalino"
keywords = ["gpu", "compute", "metal", "vulkan", "shader"]
categories = ["hardware-support", "mathematics"]

[features]
default = []
metal = []
vulkan = ["dep:ash"]
verify = ["dep:karpal-verify", "dep:karpal-proof"]

[dependencies]
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
naga = { version = "27", features = ["wgsl-in", "spv-out", "msl-out"] }

# Verification (GPU safety properties, obligation bundles)
karpal-verify = { version = "0.5", optional = true, path = "../karpal/karpal-verify" }
karpal-proof = { version = "0.5", optional = true, path = "../karpal/karpal-proof" }

# Vulkan backend (Linux/Windows) — raw FFI via ash
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
ash = { version = "0.38", optional = true }

[dev-dependencies]
