[package]
name = "borsalino"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Thin GPU compute abstraction — Metal and Vulkan backends for Industrial Algebra"
license = "Apache-2.0"
repository = "https://github.com/industrial-algebra/Borsalino"
keywords = ["gpu", "compute", "metal", "vulkan", "shader"]
categories = ["hardware-support", "mathematics"]

[features]
default = []
metal = []
vulkan = ["dep:ash"]
verify = ["dep:karpal-verify", "dep:karpal-proof", "dep:rand"]

[dependencies]
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
naga = { version = "27", features = ["wgsl-in", "spv-out", "msl-out"] }

# Verification (GPU safety properties, obligation bundles)
# For local development, add: path = "../karpal/karpal-verify"
karpal-verify = { version = "0.6", optional = true }
karpal-proof = { version = "0.6", optional = true }
rand = { version = "0.8", optional = true }

# Metal backend (macOS) — objc crate for safe ARM64 msg_send dispatch
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# Vulkan backend (Linux/Windows) — raw FFI via ash
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
ash = { version = "0.38", optional = true }

[dev-dependencies]
rand = "0.8"
